@@ -61,7 +61,8 @@ New Commands:
 - Plots:       adding a 3rd coordinate to shade series fills area between y's
 
 Fixes:
-- draw_image: fixed draw_image flipping issue #310
+- delete_item: fixed false delete item not found warning #327
+- draw_image:  fixed draw_image flipping issue #310
 - add_drawing: fixed crash on add_image using invalid path with texture coordinates
 
 
